--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.4.0",
     "element-plus": "^2.3.4",
     "js-md5": "^0.7.3",
     "unplugin-vue-components": "^0.24.1",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "wangeditor": "^4.7.15"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
