--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@vitejs/plugin-vue": "^4.1.0",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.4.0",
     "element-plus": "^2.3.4",
     "js-md5": "^0.7.3",
-    "unplugin-vue-components": "^0.24.1",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
     "sass": "^1.62.1",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-element-plus": "^0.7.1",
-    "vite": "^4.2.0"
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.3.9",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   }
 }
